// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scene selectors - Actor List getActorCollection matches snapshot 1`] = `
Object {
  "gimli": Object {
    "id": "gimli",
    "name": "Gimli, son of Glóin",
    "size": 3,
    "speed": 60,
    "status": Object {
      "action": Object {
        "data": "Legolas Greenleaf",
        "type": "befriending-elves",
      },
      "position": Object {
        "x": 100,
        "y": 100,
      },
    },
  },
  "treestump": Object {
    "id": "treestump",
    "name": "Treestump Block",
    "size": 5,
    "speed": 90,
    "status": Object {
      "action": Object {
        "type": "grumbling",
      },
      "position": Object {
        "x": 200,
        "y": 50,
      },
    },
  },
  "trogdor": Object {
    "id": "trogdor",
    "name": "Trogdor, the Burninator",
    "size": 3,
    "speed": 120,
    "status": Object {
      "action": Object {
        "data": Object {
          "location": "The Countryside",
          "target": "The Peasants",
        },
        "type": "burninating",
      },
      "position": Object {
        "x": 5,
        "y": 5,
      },
    },
  },
}
`;

exports[`scene selectors - Actor List getActorStatusCollection matches snapshot 1`] = `
Object {
  "gimli": Object {
    "action": Object {
      "data": "Legolas Greenleaf",
      "type": "befriending-elves",
    },
    "id": "gimli",
    "position": Object {
      "x": 100,
      "y": 100,
    },
  },
  "treestump": Object {
    "action": Object {
      "type": "grumbling",
    },
    "id": "treestump",
    "position": Object {
      "x": 200,
      "y": 50,
    },
  },
  "trogdor": Object {
    "action": Object {
      "data": Object {
        "location": "The Countryside",
        "target": "The Peasants",
      },
      "type": "burninating",
    },
    "id": "trogdor",
    "position": Object {
      "x": 5,
      "y": 5,
    },
  },
}
`;
